--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png">
   </head>
   <body>
     <div class="wrapper">
